# wind_sensor

./: README.md
limit_switch/: CMakeLists.txt  package.xml
limit_switch/include/: motor_fixture.h
limit_switch/launch/: stepper.launch
limit_switch/nodes/: mag_switch.py  max_min.py  read_motor.py  read_switch.py  stepper_motor.py
limit_switch/nodes/stepper_operation/: stepper_class.py  stepper_main.py
limit_switch/src/: motor_fixture.cpp  motor_fixture_node.cpp
