<?xml version="1.0"?>
<package format="2">
  <name>limit_switch</name>
  <version>0.0.0</version>
  <description>The limit_switch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="flybot@todo.todo">flybot</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>



  <depend>roslaunch</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roslib</depend>
  <!--<depend>rviz</depend>
  <depend>xacro</depend>
  <depend>message_filters</depend>
  <depend>phidgets_api</depend>
  <depend>phidgets_msgs</depend>
  <depend>libphidget22</depend> -->



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
